--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "dotenv": "^16.3.2",
     "http-proxy-middleware": "^2.0.6",
